@startuml
skinparam monochrome true
skinparam shadowing false
skinparam dpi 220
skinparam defaultFontName "PingFang TC"
skinparam defaultFontSize 12
skinparam linetype ortho
skinparam nodesep 30
skinparam ranksep 40
hide circle
hide empty methods

entity "ai_chat_sessions" as ai_chat_sessions {
  {field} <&key> session_id : int
  --
  {field} user_id : int
  {field} status : enum
  {field} created_at : datetime
  {field} updated_at : datetime
}
entity "ai_chat_messages" as ai_chat_messages {
  {field} <&key> message_id : int
  --
  {field} session_id : int
  {field} role : enum
  {field} content : text
  {field} book_ids : varchar(255)
  {field} created_at : datetime
}
entity "ai_support_sessions" as ai_support_sessions {
  {field} <&key> session_id : int
  --
  {field} user_id : int
  {field} status : enum
  {field} ticket_id : int
  {field} created_at : datetime
  {field} updated_at : datetime
}
entity "ai_support_messages" as ai_support_messages {
  {field} <&key> message_id : int
  --
  {field} session_id : int
  {field} role : enum
  {field} content : text
  {field} created_at : datetime
}
entity "ai_consents" as ai_consents {
  {field} <&key> user_id : int
  --
  {field} granted : tinyint(1)
  {field} updated_at : datetime
}
entity "ai_recommendation_cache" as ai_recommendation_cache {
  {field} <&key> user_id : int
  --
  {field} payload : text
  {field} created_at : datetime
}
entity "ai_settings" as ai_settings {
  {field} <&key> id : int
  --
  {field} config : text
  {field} updated_by : int
  {field} updated_at : datetime
}
entity "ai_usage_logs" as ai_usage_logs {
  {field} <&key> usage_id : bigint
  --
  {field} feature : varchar(30)
  {field} provider : varchar(20)
  {field} model : varchar(80)
  {field} user_id : int
  {field} input_tokens : int
  {field} cached_tokens : int
  {field} output_tokens : int
  {field} search_calls : int
  {field} cost_usd : decimal(12,6)
  {field} latency_ms : int
  {field} status : enum
  {field} error_code : varchar(60)
  {field} error_detail : varchar(400)
  {field} created_at : datetime
}
entity "ai_embeddings" as ai_embeddings {
  {field} <&key> kind : varchar(20)
  {field} <&key> ref_id : varchar(64)
  --
  {field} model : varchar(100)
  {field} content_hash : char(64)
  {field} vector : mediumtext
  {field} updated_at : datetime
}
ai_chat_sessions ||--o{ ai_chat_messages
ai_support_sessions ||--o{ ai_support_messages
ai_consents -[hidden]down- ai_usage_logs
ai_recommendation_cache -[hidden]down- ai_embeddings
@enduml
